# jd-discovery

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: fd.rs  flatten.rs  flatten_main.rs  ind.rs  main.rs
tests/cmd/: jd-fd-empty.trycmd  jd-fd-help.trycmd  jd-fd.stdin  jd-fd.stdout  jd-fd.toml  jd-help.trycmd  jd-ind-empty.trycmd  jd-ind-help.trycmd  jd-ind.stdin  jd-ind.stdout  jd-ind.toml
