[package]
name = "jd-discovery"
version = "0.1.0"
authors = ["Michael Mior <mmior@mail.rit.edu>"]
edition = "2021"
description = "Fast dependency discovery on nested JSON data"
homepage = "https://github.com/michaelmior/jd-discovery/"
repository = "https://github.com/michaelmior/jd-discovery/"
license = "MIT"
keywords = ["json", "dependency"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "jd"
path = "src/main.rs"

[dependencies]
json = "0.12.4"
itertools = "0.10.5"
indicatif = "0.17.3"
roaring = { git = "https://github.com/michaelmior/roaring-rs", branch = "hashable" }
clap = { version = "4.0.12", features = ["derive"] }
rayon = "1.5.3"

[dev-dependencies]
rusty-hook = "0.11.2"
trycmd = "0.14.0"
